[package]
name = "odeir"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.2"
libc = "0.2.140"
minijinja = "0.31.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
